--- a/StockBoardConnect/package.json
+++ b/StockBoardConnect/package.json
@@ -2,17 +2,28 @@
   "version": "1.0.0",
   "name": "asp.net",
   "private": true,
+  "scripts": {
+    "build": "rimraf wwwroot/dist && webpack"
+  },
   "dependencies": {
-    "react": "^17.0.2",
-    "styled-components": "^5.3.0"
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-helmet": "^6.0.0",
+    "react-router-dom": "^5.0.0",
+    "styled-components": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.0",
-    "@babel/preset-env": "^7.14.1",
-    "@babel/preset-react": "^7.13.13",
-    "babel-loader": "^8.2.2",
-    "webpack": "5.36.2",
-    "webpack-cli": "4.7.0",
-    "webpack-manifest-plugin": "3.1.1"
+    "@babel/core": "7.8.7",
+    "@babel/plugin-proposal-class-properties": "7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "7.8.3",
+    "@babel/preset-env": "7.8.7",
+    "@babel/preset-react": "7.8.3",
+    "babel-loader": "8.0.6",
+    "babel-runtime": "6.26.0",
+    "rimraf": "3.0.2",
+    "webpack": "4.43.0",
+    "webpack-cli": "3.3.12",
+    "webpack-manifest-plugin": "2.2.0"
   }
 }
