--- a/StockBoardConnect/package.json
+++ b/StockBoardConnect/package.json
@@ -20,9 +20,13 @@
     "@babel/plugin-syntax-dynamic-import": "7.8.3",
     "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
+    "@material-ui/core": "^4.11.4",
     "babel-loader": "8.0.6",
     "babel-runtime": "6.26.0",
+    "css-loader": "^5.2.4",
+    "normalize.css": "^8.0.1",
     "rimraf": "3.0.2",
+    "style-loader": "^2.0.0",
     "webpack": "4.43.0",
     "webpack-cli": "3.3.12",
     "webpack-manifest-plugin": "2.2.0"
