--- a/StockBoardConnect/package.json
+++ b/StockBoardConnect/package.json
@@ -10,8 +10,7 @@
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-helmet": "^6.0.0",
-    "react-router-dom": "^5.0.0",
-    "styled-components": "^4.0.0"
+    "react-router-dom": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
