--- a/StockBoardConnect/StockBoardConnect.csproj
+++ b/StockBoardConnect/StockBoardConnect.csproj
@@ -16,11 +16,15 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="React.AspNet" Version="5.2.11" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Content\components\atoms\" />
+    <Folder Include="Areas\Api\Controllers\" />
+    <Folder Include="Areas\Api\Data\" />
+    <Folder Include="Areas\Api\Models\" />
+    <Folder Include="Areas\Api\Views\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
