--- a/StockBoardConnect/package.json
+++ b/StockBoardConnect/package.json
@@ -21,6 +21,7 @@
     "@babel/preset-react": "7.8.3",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "axios": "^0.21.1",
     "babel-loader": "8.0.6",
     "babel-runtime": "6.26.0",
     "css-loader": "^5.2.4",
