会社テーブルを作成して保存するアクションを作成した

--- a/StockBoardConnect/StockBoardConnect.csproj
+++ b/StockBoardConnect/StockBoardConnect.csproj
@@ -26,6 +26,7 @@
     <Folder Include="Areas\Api\Data\" />
     <Folder Include="Areas\Api\Models\" />
     <Folder Include="Areas\Api\Views\" />
+    <Folder Include="Models\ViewModels\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
