testプロジェクトの参照追加

--- a/StockBoardConnect/StockBoardConnect.csproj
+++ b/StockBoardConnect/StockBoardConnect.csproj
@@ -30,4 +30,8 @@
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\StockBoardConnectTest\StockBoardConnectTest\StockBoardConnectTest.csproj" />
+  </ItemGroup>
+
 </Project>
