アバターの追加ができるようにした

--- a/StockBoardConnect/StockBoardConnect.csproj
+++ b/StockBoardConnect/StockBoardConnect.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="Areas\Api\Views\" />
     <Folder Include="Models\ViewModels\" />
+    <Folder Include="wwwroot\img\" />
     <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
